[package]
name = "registry_wizard"
version = "0.4.6"
edition = "2021"

[dependencies]
roa_wizard = { git = "https://github.com/Kioubit/roa_wizard.git", tag = "0.1.10" }
cidr-utils = "0.6.1"
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.140"
bgpkit-parser = { version = "0.11.0", default-features = false, features = ["parser", "oneio"] }
rayon = "1.10.0"
clap = "4.5.31"
dot = "0.1.4"

tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"], optional = true }

axum = { version = "0.8.1", optional = true }
rust-embed = { version = "8.6.0", optional = true }
mime_guess = { version = "2.0.5", optional = true }

rpki = {version = "0.18.5", features = ["rtr", "crypto"], optional = true}
tokio-stream = { version = "0.1" , features = ["net"], optional = true}
futures-util = { version = "0.3", optional = true }

[features]
default = ["explorer", "rtr-server"]
explorer = [
    "tokio",
    "axum",
    "rust-embed",
    "mime_guess"
]
rtr-server = [
    "tokio",
    "rpki",
    "tokio-stream",
    "futures-util"
]

[profile.release]
opt-level = 3       # Enable all optimizations
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
