[package]
name = "registry_wizard"
version = "0.4.10"
edition = "2021"

[dependencies]
roa_wizard = { path = "../roa_wizard" }
cidr-utils = "0.6.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.142"
bgpkit-parser = { version = "0.11.1", default-features = false, features = ["parser", "oneio"] }
rayon = "1.10.0"
clap = "4.5.43"
dot = "0.1.4"

tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal"], optional = true }

axum = { version = "0.8.4", optional = true }
rust-embed = { version = "8.7.2", optional = true }
mime_guess = { version = "2.0.5", optional = true }

rpki = {version = "0.19.1", features = ["rtr", "crypto"], optional = true}
tokio-stream = { version = "0.1" , features = ["net"], optional = true}
futures-util = { version = "0.3", optional = true }

[features]
default = ["explorer", "rtr-server"]
explorer = [
    "tokio",
    "axum",
    "rust-embed",
    "mime_guess"
]
rtr-server = [
    "tokio",
    "rpki",
    "tokio-stream",
    "futures-util"
]
