[package]
name = "registry_wizard"
version = "0.4.16"
edition = "2024"

[dependencies]
roa_wizard = { path = "../roa_wizard" }
cidr-utils = "0.6.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
bgpkit-parser = { version = "0.13.0", default-features = false, features = ["parser", "oneio"] }
rayon = "1.11.0"
clap = "4.5.53"
dot = "0.1.4"

tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal"], optional = true }

axum = { version = "0.8.7", optional = true }
rust-embed = { version = "8.9.0", optional = true }
mime_guess = { version = "2.0.5", optional = true }

rpki = {version = "0.19.1", features = ["rtr", "crypto"], optional = true}
tokio-stream = { version = "0.1.17" , features = ["net"], optional = true}
futures-util = { version = "0.3.31", optional = true }

[features]
default = ["explorer", "rtr-server"]
explorer = [
    "tokio",
    "axum",
    "rust-embed",
    "mime_guess"
]
rtr-server = [
    "tokio",
    "rpki",
    "tokio-stream",
    "futures-util"
]
